Add page on podcast post

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 	<body class="landing">
 		<div id="page-wrapper">
 
+			<!-- Header -->
+				<header id="header">
+					<nav id="nav">
+						<ul>
+							<li>
+								<a href="index.html" class="button">Inicio</a>
+							</li>
+						</ul>
+					</nav>
+				</header>
+
 			<!-- Banner -->
 				<section id="banner">
 					<h2>QuebraDev</h2>
@@ -37,11 +48,11 @@
 
 							<section class="box special">
 								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-								<h3>#0 - Periferia e comunidade.</h3>
+								<h3>Comunidade de desenvolvimento e periferia.</h3>
 								<p>Neste podcast falamos um pouco sobre o projeto, nossa história, um pouco sobre a sindrome do impostor e a comunidade de desenvolvimento.</p>
 								<ul class="actions">
 									<li>
-										<a href="podcast-0.html" class="button alt">Ver mais</a>
+										<a href="podcast-0-comunidade-desenvolvimento-periferia.html" class="button alt">Ver</a>
 									</li>
 								</ul>
 							</section>
