Change icon soundcloud to mixcloud

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<ul class="icons">
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-soundcloud"><span class="label">SoundCloud</span></a></li>
+						<li><a href="#" class="icon fa-mixcloud"><span class="label">MixCloud</span></a></li>
 						<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
 					</ul>
 
