Change title and footer add links

--- a/podcast-0-comunidade-desenvolvimento-periferia.html
+++ b/podcast-0-comunidade-desenvolvimento-periferia.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Alpha by HTML5 UP</title>
+		<title>QuebraDev - Podcast #0 - Comunidade de Desenvolvimento e Periferia</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -61,8 +61,8 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/QuebraDev" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/QuebraDev" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-mixcloud"><span class="label">MixCloud</span></a></li>
-						<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
+						<li><a href="https://www.mixcloud.com/QuebraDev/" class="icon fa-mixcloud"><span class="label">MixCloud</span></a></li>
+						<li><a href="https://www.youtube.com/channel/UCcC9BomrjB8nM4WwGXxAkgg" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
 					</ul>
 
 					<ul class="copyright">
