--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>QuebraDev - Um podcast da periferia para periferia</title>
+		<title>QuebraDev</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,7 +19,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<h2>QuebraDev</h2>
-					<p>Um podcast de desenvolvimento da periferia para a periferia.</p>
+					<p>Um podcast de origem periférica e com destino voltado à origem.</p>
 				</section>
 
 			<!-- Main -->
@@ -28,7 +28,8 @@
 					<section class="box special">
 						<header class="major">
 							<h2>Quem Somos</h2>
-							<p>O podcast surgiu de forma independente para que pudessemos transformar o trajeto da periferia mais produtivo a partir de audios sobre tecnlogia, trazendo informação de uma forma acessesivel e inclusiva. Com a ideia de lançar semanalmente novos episódios, contamos com três principais desenvolvedores vindos da periferia, Guarulhos, Itaquera (Zona Leste), Apurá (Zona Zul).</p>
+							<p>O QuebraDev é um podcast de origem periférica que surgiu de forma independente 
+								com a ideia de disseminar informação de uma maneira simples, interativa e inclusiva.</p>
 						</header>
 					</section>
 
@@ -37,8 +38,9 @@
 
 							<section class="box special">
 								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-								<h3>#0 - Periferia e comunidade.</h3>
-								<p>Neste podcast falamos um pouco sobre o projeto, nossa história, um pouco sobre a sindrome do impostor e a comunidade de desenvolvimento.</p>
+								<h3>#0 - Periferia e a comunidade.</h3>
+								<p>Neste episódio, falamos um pouco sobre a ideia da criação do podcast, 
+									também sobre nossa história e dificuldades em se ambientar na área de tecnologia.</p>
 								<ul class="actions">
 									<li>
 										<a href="podcast-0.html" class="button alt">Ver mais</a>
