Prepando pagina do podcast 0
Colocando links, referencias musicais e descrição da pagina

--- a/podcast-0-comunidade-desenvolvimento-periferia.html
+++ b/podcast-0-comunidade-desenvolvimento-periferia.html
@@ -40,19 +40,87 @@
 						
 						<br>
 
-						<h3>This is a subheading</h3>
+						<h3>Sobre este episódio</h3>
 
-						<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+						<p>
+							Neste episódio falamos um pouco sobre a ideia do podcast e como ele surgiu, os problemas de locomoção
+							entre periferia e centro para o trabalho, e também falamos sobre como conhecemos a área de desenvolvimento
+							e principais dificuldades em se habituar no ambiente de trabalho, passamos um pouco sobre a sindrome do
+							impostor e para finalizar falamos sobre as comunidades de desenvolvimento e como elas podem ajudar você
+							a crescer pessoalmente e profissionalmente, tudo isso com muita cultura Hip Hop.
+						</p>
 						<div class="row">
 							<div class="6u 12u(mobilep)">
-								<h3>And now a subheading</h3>
-								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+								<h3>Participantes</h3>
+								<p>
+									<ul>
+										<li>Kaio Teixeira - <b>Host</b>
+											<ul>
+												<li><a href="https://twitter.com/teixeirak_" target="_blank">Twitter</a></li>
+												<li><a href="https://github.com/kteixeira" target="_blank">Github</a></li>
+											</ul>
+										</li>
+										<li>Gustavo Castilião
+											<ul>
+												<li><a href="https://twitter.com/gucastiliao" target="_blank">Twitter</a></li>
+												<li><a href="https://github.com/gucastiliao" target="_blank">Github</a></li>
+											</ul>
+										</li>
+										<li>Reginaldo Junior
+											<ul>
+												<li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+												<li><a href="https://twitter.com/reginaldoojnr" target="_blank">Github</a></li>
+											</ul>
+										</li>
+									</ul>
+								</p>
 							</div>
 							<div class="6u 12u(mobilep)">
-								<h3>And another subheading</h3>
-								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+								<h3>Links e Músicas</h3>
+								<h4>Links</h4>
+								<p>
+									<ul>
+										<li><a href="https://github.com/backend-br/">https://github.com/backend-br</a></li>
+										<li><a href="https://github.com/training-center">https://github.com/training-center</a></li>
+										<li><a href="https://www.codamos.club/">https://www.codamos.club/</a></li>
+										<li><a href="https://www.cartacapital.com.br/sociedade/sindrome-do-impostor-mais-uma-pedra-no-caminho-das-mulheres">https://www.cartacapital.com.br/sociedade/sindrome-do-impostor-mais-uma-pedra-no-caminho-das-mulheres</a></a></li>
+										<li><a href="https://phpsp.org.br/">https://phpsp.org.br/</a></li>
+									</ul>
+								</p>
+								<h4>Músicas</h4>
+								<p>
+									<ul>
+										<li>Worst Comes To Worst - Dilated Peoples</li>
+										<li>You Can't Hide You Can't Run - Dilated Peoples</li>
+										<li>The World Is Yours - Nas</li>
+										<li>Brinquedo Assassino - A Família</li>
+										<li>Jorge Ben Jor - W Brasil</li>
+										<li>Tim Maia - Bom Senso</li>
+										<li>Real Hip-Hop - Das EFX</li>
+										<li>The Best Secret - Pete Rock</li>
+									</ul>
+								</p>
 							</div>
 						</div>
+						<div id="disqus_thread"></div>
+						<script>
+							/**
+							*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+							*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+							/*
+							var disqus_config = function () {
+							this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+							this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+							};
+							*/
+							(function() { // DON'T EDIT BELOW THIS LINE
+							var d = document, s = d.createElement('script');
+							s.src = 'https://quebradev-github-io.disqus.com/embed.js';
+							s.setAttribute('data-timestamp', + new Date());
+							(d.head || d.body).appendChild(s);
+							})();
+						</script>
+						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>					
 					</div>
 				</section>
 
