links and description

--- a/podcast-0-comunidade-desenvolvimento-periferia.html
+++ b/podcast-0-comunidade-desenvolvimento-periferia.html
@@ -30,7 +30,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<h2>Comunidade de desenvolvimento e periferia</h2>
-					<p>Um podcast de desenvolvimento da periferia para a periferia.</p>
+					<p>Episódio piloto, apresentaremos aqui a ideia da criação do podcast, além de um pouco da nossa vivência.</p>
 				</section>
 
 			<!-- Main -->
@@ -68,8 +68,8 @@
 										</li>
 										<li>Reginaldo Junior
 											<ul>
-												<li><a href="https://twitter.com" target="_blank">Twitter</a></li>
-												<li><a href="https://twitter.com/reginaldoojnr" target="_blank">Github</a></li>
+												<li><a href="https://twitter.com/reginaldoojnr" target="_blank">Twitter</a></li>
+												<li><a href="https://github.com/reginaldojunior" target="_blank">Github</a></li>
 											</ul>
 										</li>
 									</ul>
@@ -80,11 +80,13 @@
 								<h4>Links</h4>
 								<p>
 									<ul>
-										<li><a href="https://github.com/backend-br/">https://github.com/backend-br</a></li>
-										<li><a href="https://github.com/training-center">https://github.com/training-center</a></li>
-										<li><a href="https://www.codamos.club/">https://www.codamos.club/</a></li>
-										<li><a href="https://www.cartacapital.com.br/sociedade/sindrome-do-impostor-mais-uma-pedra-no-caminho-das-mulheres">https://www.cartacapital.com.br/sociedade/sindrome-do-impostor-mais-uma-pedra-no-caminho-das-mulheres</a></a></li>
-										<li><a href="https://phpsp.org.br/">https://phpsp.org.br/</a></li>
+										<li><a href="https://github.com/backend-br/" target="_blank">Back-End Brasil</a></li>
+										<li><a href="https://github.com/training-center" target="_blank">Training Center</a></li>
+										<li><a href="https://www.codamos.club/" target="_blank">Codamos</a></li>
+										<li><a href="https://www.cartacapital.com.br/sociedade/sindrome-do-impostor-mais-uma-pedra-no-caminho-das-mulheres" target="_blank">Um pouco sobre a Síndrome do Impostor</a></a></li>
+										<li><a href="https://phpsp.org.br/" target="_blank">PHPSP</a></li>
+										<li><a href="https://github.com/cezaraugusto/You-Dont-Know-JS" target="_blank">Tradução em Português da série You Don't Know JS</a></li>
+										<li><a href="https://medium.com/trainingcenter/entendendo-de-uma-vez-por-todas-expressões-regulares-parte-1-introdução-dfe63e289dc3" target="_blank">Artigo sobre Expressões Regulares</a></li>
 									</ul>
 								</p>
 								<h4>Músicas</h4>
