Lançamento primeiro episódio
Adicionando novos logos, iframe do primeiro episodio e algumas mudanças nos textos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>QuebraDev</h2>
+					<img src="images/logo.png" width="300" />
+
 					<p>Um podcast de origem periférica e com destino voltado à origem.</p>
 				</section>
 
@@ -45,10 +46,10 @@
 					</section>
 
 					<div class="row">
-						<div class="6u 12u(narrower)">
+						<div class="5u 12u(narrower)">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image featured"><img src="images/podcast-capa-comunidade-e-periferia.png" alt="" width="400" /></span>
 								<h3>#0 - Periferia e a comunidade.</h3>
 								<p>Neste episódio, falamos um pouco sobre a ideia da criação do podcast, 
 									também sobre nossa história e dificuldades em se ambientar na área de tecnologia.</p>
