--- a/podcast-0-comunidade-desenvolvimento-periferia.html
+++ b/podcast-0-comunidade-desenvolvimento-periferia.html
@@ -29,14 +29,15 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>Comunidade de desenvolvimento e periferia</h2>
+					<img src="images/logo.png" width="300" />
+
 					<p>Episódio piloto, apresentaremos aqui a ideia da criação do podcast, além de um pouco da nossa vivência.</p>
 				</section>
 
 			<!-- Main -->
 				<section id="main" class="container">
 					<div class="box">
-						<iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fmodel003%2Fphp_episode_001-morebasscom-20170404%2F" frameborder="0" ></iframe>
+							<iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FQuebraDev%2F0-periferia-e-a-comunidade%2F" frameborder="0" ></iframe>
 						
 						<br>
 
@@ -92,12 +93,12 @@
 								<h4>Músicas</h4>
 								<p>
 									<ul>
-										<li>Worst Comes To Worst - Dilated Peoples</li>
-										<li>You Can't Hide You Can't Run - Dilated Peoples</li>
+										<li>Worst Comes to Worst - Dilated Peoples</li>
+										<li>You Can’t Hide, You Can’t Run - Dilated Peoples</li>
 										<li>The World Is Yours - Nas</li>
 										<li>Brinquedo Assassino - A Família</li>
-										<li>Jorge Ben Jor - W Brasil</li>
-										<li>Tim Maia - Bom Senso</li>
+										<li>W Brasil - Jorge Ben</li>
+										<li>Bom Senso - Tim Maia</li>
 										<li>Real Hip-Hop - Das EFX</li>
 										<li>The Best Secret - Pete Rock</li>
 									</ul>
