--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119134705-1"></script>
+			<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-119134705-1');
+			</script>
 
 	</body>
 </html>
