--- a/podcast-0-comunidade-desenvolvimento-periferia.html
+++ b/podcast-0-comunidade-desenvolvimento-periferia.html
@@ -152,5 +152,14 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
+			<!-- Global site tag (gtag.js) - Google Analytics -->
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119134705-1"></script>
+			<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-119134705-1');
+			</script>
 	</body>
 </html>
