--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+
+		<meta property="og:image" content="images/logo.png">
+		<meta property="og:image:type" content="image/jpeg">
+		<meta property="og:image:width" content="800">
+		<meta property="og:image:height" content="600">
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
