--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-
-		<meta property="og:image" content="images/logo.png">
-		<meta property="og:image:type" content="image/jpeg">
-		<meta property="og:image:width" content="800">
-		<meta property="og:image:height" content="600">
+		
+		<meta property="og:image" content="/images/logo.png">
+		<meta name="twitter:image:src" content="/images/logo.png">
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
