--- a/podcast-0-comunidade-desenvolvimento-periferia.html
+++ b/podcast-0-comunidade-desenvolvimento-periferia.html
@@ -13,10 +13,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
-		<meta property="og:image" content="images/podcast-capa-comunidade-e-periferia.png">
-		<meta property="og:image:type" content="image/jpeg">
-		<meta property="og:image:width" content="800">
-		<meta property="og:image:height" content="600">
+		<meta property="og:image" content="/images/podcast-capa-comunidade-e-periferia.png">
+		<meta name="twitter:image:src" content="/images/podcast-capa-comunidade-e-periferia.png">
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
