--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
 						<div class="5u 12u(narrower)">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/podcast-capa-comunidade-e-periferia.png" alt="" width="400" /></span>
-								<h3>#0 - Periferia e a comunidade.</h3>
+								<span class="image featured">
+										<a href="podcast-0-comunidade-desenvolvimento-periferia.html"><img src="images/podcast-capa-comunidade-e-periferia.png" alt="" width="400" /></a>
+								</span>
+								<a href="podcast-0-comunidade-desenvolvimento-periferia.html"><h3>#0 - Periferia e a comunidade.</h3></a>
 								<p>Neste episódio, falamos um pouco sobre a ideia da criação do podcast, 
 									também sobre nossa história e dificuldades em se ambientar na área de tecnologia.</p>
 								<ul class="actions">
