--- a/podcast-0-comunidade-desenvolvimento-periferia.html
+++ b/podcast-0-comunidade-desenvolvimento-periferia.html
@@ -37,15 +37,16 @@
 					<p>Episódio piloto, apresentaremos aqui a ideia da criação do podcast, além de um pouco da nossa vivência.</p>
 				</section>
 
-			<!-- Main -->
+			    <!-- Main -->
 				<section id="main" class="container">
 					<div class="box">
-							<iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FQuebraDev%2F0-periferia-e-a-comunidade%2F" frameborder="0" ></iframe>
-						
+                        <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FQuebraDev%2F0-periferia-e-a-comunidade%2F" frameborder="0" ></iframe>
 						<br>
 
+						<h3>Download</h3>
+						<p>Faça o Download do episódio clicando <a href="https://drive.google.com/uc?id=1WKesUv2gBzldDMdd4okumrTX_BscQTEC&export=download" target="_blank">AQUI</a></p>
+						
 						<h3>Sobre este episódio</h3>
-
 						<p>
 							Neste episódio falamos um pouco sobre a ideia do podcast e como ele surgiu, os problemas de locomoção
 							entre periferia e centro para o trabalho, e também falamos sobre como conhecemos a área de desenvolvimento
@@ -53,6 +54,7 @@
 							impostor e para finalizar falamos sobre as comunidades de desenvolvimento e como elas podem ajudar você
 							a crescer pessoalmente e profissionalmente, tudo isso com muita cultura Hip Hop.
 						</p>
+
 						<div class="row">
 							<div class="6u 12u(mobilep)">
 								<h3>Participantes</h3>
