--- a/podcast-0-comunidade-desenvolvimento-periferia.html
+++ b/podcast-0-comunidade-desenvolvimento-periferia.html
@@ -40,11 +40,11 @@
 			    <!-- Main -->
 				<section id="main" class="container">
 					<div class="box">
-                        <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FQuebraDev%2F0-periferia-e-a-comunidade%2F" frameborder="0" ></iframe>
+						<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/444376998&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 						<br>
 
 						<h3>Download</h3>
-						<p>Faça o Download do episódio clicando <a href="https://drive.google.com/uc?id=1WKesUv2gBzldDMdd4okumrTX_BscQTEC&export=download" target="_blank">AQUI</a></p>
+						<p>Faça o Download do episódio clicando <a href="https://api.soundcloud.com/tracks/444376998/download?client_id=Iy5e1Ri4GTNgrafaXe4mLpmJLXbXEfBR" target="_blank">AQUI</a></p>
 						
 						<h3>Sobre este episódio</h3>
 						<p>
