soundcloud in footer

--- a/podcast-0-comunidade-desenvolvimento-periferia.html
+++ b/podcast-0-comunidade-desenvolvimento-periferia.html
@@ -137,7 +137,7 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/QuebraDev" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/QuebraDev" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.mixcloud.com/QuebraDev/" class="icon fa-mixcloud"><span class="label">MixCloud</span></a></li>
+						<li><a href="https://soundcloud.com/quebra-dev" class="icon fa-soundcloud"><span class="label">SoundCloud</span></a></li>
 						<li><a href="https://www.youtube.com/channel/UCcC9BomrjB8nM4WwGXxAkgg" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
 					</ul>
 
