--- a/podcast-0-comunidade-desenvolvimento-periferia.html
+++ b/podcast-0-comunidade-desenvolvimento-periferia.html
@@ -13,8 +13,13 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
+		<meta property="og:title" content="QuebraDev">
+		<meta property="og:description" content="O podcast perifatécico.">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="http://quebradev.com.br/podcast-0-comunidade-desenvolvimento-periferia.html">
 		<meta property="og:image" content="https://quebradev.github.io/images/podcast-capa-comunidade-e-periferia.png">
 		<meta name="twitter:image:src" content="https://quebradev.github.io/images/podcast-capa-comunidade-e-periferia.png">
+		<meta name="twitter:card" content="summary"></meta>
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
