--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:site" content="@nytimesbits" />
+		<meta name="twitter:creator" content="@nickbilton" />
+		<meta property="og:url" content="http://quebradev.com.br/podcast-0-comunidade-desenvolvimento-periferia.html">
+		<meta property="og:title" content="QuebraDev">
+		<meta property="og:description" content="O podcast perifatécnico.">
 		<meta property="og:image" content="https://quebradev.github.io/images/logo.png">
-		<meta name="twitter:image:src" content="https://quebradev.github.io/images/logo.png">
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
