--- a/podcast-0-comunidade-desenvolvimento-periferia.html
+++ b/podcast-0-comunidade-desenvolvimento-periferia.html
@@ -18,7 +18,7 @@
 		<meta name="twitter:creator" content="@nickbilton" />
 		<meta property="og:url" content="http://quebradev.com.br/podcast-0-comunidade-desenvolvimento-periferia.html">
 		<meta property="og:title" content="QuebraDev">
-		<meta property="og:description" content="O podcast perifatécnico.">
+		<meta property="og:description" content="Episódio piloto, apresentaremos aqui a ideia da criação do podcast, além de um pouco da nossa vivência.">
 		<meta property="og:image" content="https://quebradev.github.io/images/podcast-capa-comunidade-e-periferia.png">
 
 	</head>
