add feed rss link

--- a/podcast-0-comunidade-desenvolvimento-periferia.html
+++ b/podcast-0-comunidade-desenvolvimento-periferia.html
@@ -145,6 +145,7 @@
 						<li><a href="https://github.com/QuebraDev" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://soundcloud.com/quebra-dev" class="icon fa-soundcloud"><span class="label">SoundCloud</span></a></li>
 						<li><a href="https://www.youtube.com/channel/UCcC9BomrjB8nM4WwGXxAkgg" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
+						<li><a href="http://feeds.feedburner.com/quebradev" class="icon fa-rss"><span class="label">RSS</span></a></li>
 					</ul>
 
 					<ul class="copyright">
