Preparando página novo episódio
Preparando a pagina para o novo episodio com estrutura e links, faltando descrição e imagens

--- a/index.html
+++ b/index.html
@@ -54,7 +54,26 @@
 					</section>
 
 					<div class="row">
-						<div class="5u 12u(narrower)">
+						<div class="4u">
+
+							<section class="box special">
+								<span class="image featured">
+									<a href="podcast-1-iniciando-no-desenvolvimento-web.html">
+										<img src="images/podcast-capa-comunidade-e-periferia.png" alt="" width="400" />
+									</a>
+								</span>
+								<a href="podcast-1-iniciando-no-desenvolvimento-web.html"><h3>#1 - Iniciando no desenvolvimento web.</h3></a>
+								<p>Aquela dúvida de como começar estudar desenvolvimento web? Tentamos neste episódio desvendar todos os
+									mistérios que envolve esse mundo.</p>
+								<ul class="actions">
+									<li>
+										<a href="podcast-1-iniciando-no-desenvolvimento-web.html" class="button alt">Ver</a>
+									</li>
+								</ul>
+							</section>
+
+						</div>
+						<div class="4u">
 
 							<section class="box special">
 								<span class="image featured">
