--- a/podcast-1-iniciando-no-desenvolvimento-web.html
+++ b/podcast-1-iniciando-no-desenvolvimento-web.html
@@ -97,13 +97,16 @@
 								<h4>Músicas</h4>
 								<p>
 									<ul>
-                                        <li>Criolo - Subirusdoistiozin</li>
                                         <li>Drake & Lil Baby - Yes Indeed</li>
-                                        <li>Djonga - UFA</li>
+                                        <li>Criolo - Subirusdoistiozin</li>
                                         <li>J Cole - A Tale of 2 Cities</li>
                                         <li>Kendrick Lamar - DNA</li>
-                                        <li>Dr Dre. & Snoop Dogg - Nuthin But A G Thang</li>
+                                        <li>Cardi B - Red Barz</li>
                                         <li>R.U.A 3 (Selva De Concreto) Vietnã/Nocivo Shomon/NP Vocal/Helião/Chico/Clara Lima/Raillow</li>
+                                        <li>Drik Barbosa - Camélia</li>
+                                        <li>Dr Dre. & Snoop Dogg - Nuthin But A G Thang</li>
+                                        <li>Djonga - UFA</li>
+                                        <li>Leschea - Fulton St</li>
 									</ul>
 								</p>
 							</div>
