--- a/podcast-1-iniciando-no-desenvolvimento-web.html
+++ b/podcast-1-iniciando-no-desenvolvimento-web.html
@@ -54,7 +54,12 @@
 						
 						<h3>Sobre este episódio</h3>
 						<p>
-                            Como todos, tivemos dificuldades para o começar a estudar desenvolvimento web, erramos muito e também tivemos alguns acertos.
+                            Nesse primeiro episódio nós iremos dar uma pequena prévia de como podem ser dados os primeiros passos para se tornar 
+                            um desenvolvedor web. Abordamos desde conceitos técnicos estruturais sobre a Web até um dos destinos da área: como 
+                            iniciar no Desenvolvimento Front-End. Não deixamos de citar referências, comunidades e sem deixar de 
+                            lado a cultura Hip Hop.
+                            Deixamos explícitas muitas de nossas opiniões e caso você tenha algo a acrescentar, entre em contato com a 
+                            gente, o compartilhamento de ideias é sempre bem vindo!
 						</p>
 
 						<div class="row">
