--- a/podcast-1-iniciando-no-desenvolvimento-web.html
+++ b/podcast-1-iniciando-no-desenvolvimento-web.html
@@ -18,7 +18,7 @@
 		<meta name="twitter:creator" content="@nickbilton" />
 		<meta property="og:url" content="http://quebradev.com.br/podcast-1-iniciando-no-desenvolvimento-web.html">
 		<meta property="og:title" content="QuebraDev">
-		<meta property="og:description" content="Dúvidas sobre como começar no desenvolvimento web? Falamos um pouco sobre como começar e o que estudar.">
+		<meta property="og:description" content="Ainda tem aquela dúvida de como começar a estudar para tornar um desenvolvedor web? Tentamos desvendar mistérios que envolvem esse mundo. Chega mais cuidado ao da o play.">
 		<meta property="og:image" content="https://quebradev.github.io/images/podcast-iniciando-no-desenvolvimento-web.png">
 	</head>
 	<body class="landing">
@@ -39,8 +39,10 @@
 				<section id="banner">
 					<img src="images/logo.png" width="300" />
 
-					<p>Aquela dúvida de como começar estudar desenvolvimento web? Tentamos neste episódio desvendar todos os
-                            mistérios que envolve esse mundo.</p>
+					<p> 
+                        Ainda tem aquela dúvida de como começar a estudar para tornar um desenvolvedor web?
+                        Tentamos desvendar mistérios que envolvem esse mundo. Chega mais cuidado ao da o play.
+                    </p>
 				</section>
 
 			    <!-- Main -->
