--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
 									</a>
 								</span>
 								<a href="podcast-1-iniciando-no-desenvolvimento-web.html"><h3>#1 - Iniciando no desenvolvimento web.</h3></a>
-								<p>Aquela dúvida de como começar estudar desenvolvimento web? Tentamos neste episódio desvendar todos os
-									mistérios que envolve esse mundo.</p>
+								<p> 
+									Ainda tem aquela dúvida de como começar a estudar para tornar um desenvolvedor web?
+									Chega mais cuidado ao da o play.
+								</p>
 								<ul class="actions">
 									<li>
 										<a href="podcast-1-iniciando-no-desenvolvimento-web.html" class="button alt">Ver</a>
