Adicionando links e imagem
Modificando algumas coisas no site para o lançamento, nome da pagina, titulo, imagens, participantes

--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
 
 							<section class="box special">
 								<span class="image featured">
-									<a href="podcast-1-iniciando-no-desenvolvimento-web.html">
-										<img src="images/podcast-capa-comunidade-e-periferia.png" alt="" width="400" />
+									<a href="podcast-1-iniciando-no-desenvolvimento-web-front-end.html">
+										<img src="images/iniciando-no-desenvolvimento-web-front-end.jpeg" alt="" width="400" />
 									</a>
 								</span>
-								<a href="podcast-1-iniciando-no-desenvolvimento-web.html"><h3>#1 - Iniciando no desenvolvimento web.</h3></a>
+								<a href="podcast-1-iniciando-no-desenvolvimento-web-front-end.html"><h3>#1 - Iniciando no desenvolvimento web.</h3></a>
 								<p> 
 									Ainda tem aquela dúvida de como começar a estudar para tornar um desenvolvedor web?
 									Chega mais cuidado ao da o play.
 								</p>
 								<ul class="actions">
 									<li>
-										<a href="podcast-1-iniciando-no-desenvolvimento-web.html" class="button alt">Ver</a>
+										<a href="podcast-1-iniciando-no-desenvolvimento-web-front-end.html" class="button alt">Ver</a>
 									</li>
 								</ul>
 							</section>
