--- a/podcast-1-iniciando-no-desenvolvimento-web-front-end.html
+++ b/podcast-1-iniciando-no-desenvolvimento-web-front-end.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>QuebraDev - Podcast #1 - Iniciando no desenvolvimento web</title>
+		<title>QuebraDev - Podcast #1 - Iniciando no desenvolvimento web - Front End</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -16,10 +16,10 @@
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:site" content="@nytimesbits" />
 		<meta name="twitter:creator" content="@nickbilton" />
-		<meta property="og:url" content="http://quebradev.com.br/podcast-1-iniciando-no-desenvolvimento-web.html">
+		<meta property="og:url" content="http://quebradev.com.br/podcast-1-iniciando-no-desenvolvimento-web-front-end.html">
 		<meta property="og:title" content="QuebraDev">
 		<meta property="og:description" content="Ainda tem aquela dúvida de como começar a estudar para tornar um desenvolvedor web? Tentamos desvendar mistérios que envolvem esse mundo. Chega mais cuidado ao da o play.">
-		<meta property="og:image" content="https://quebradev.github.io/images/podcast-iniciando-no-desenvolvimento-web.png">
+		<meta property="og:image" content="https://quebradev.github.io/images/iniciando-no-desenvolvimento-web-front-end.jpeg">
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
@@ -87,6 +87,12 @@
 												<li><a href="https://github.com/reginaldojunior" target="_blank">Github</a></li>
 											</ul>
 										</li>
+										<li>Bruno Dias
+											<ul>
+												<li><a href="https://twitter.com/" target="_blank">Twitter</a></li>
+												<li><a href="https://github.com/iBrunox11" target="_blank">Github</a></li>
+											</ul>
+										</li>
 									</ul>
 								</p>
 							</div>
@@ -96,9 +102,12 @@
 								<p>
 									<ul>
 										<li><a href="https://github.com/backend-br/" target="_blank">Back-End Brasil</a></li>
-                                        <li><a href="https://github.com/training-center" target="_blank">Training Center</a></li>
+										<li><a href="https://github.com/training-center/mentoria" target="_blank">Training Center - Mentoria</a></li>
+										<li><a href="https://github.com/frontendbr">Front End Brasil</a></li>
                                         <li><a href="https://www.youtube.com/user/cursosemvideo/playlists" target="_blank">Guanabara Cursos</a></li>
-                                        <li><a href="https://jovemnerd.com.br/nerdcast/nerdcast-238-profissao-desenvolvedor-de-games/">Nerdcast 238 - Profissão Desenvolvedor de Games</a></li>
+										<li><a href="https://jovemnerd.com.br/nerdcast/nerdcast-238-profissao-desenvolvedor-de-games/">Nerdcast 238 - Profissão Desenvolvedor de Games</a></li>
+										<li><a href="https://www.udemy.com/">Udemy Cursos</a></li>
+										<li><a href="hhttps://www.codecademy.com/pt-BR">Code Academy</a></li>
 									</ul>
 								</p>
 								<h4>Músicas</h4>
