--- a/podcast-1-iniciando-no-desenvolvimento-web-front-end.html
+++ b/podcast-1-iniciando-no-desenvolvimento-web-front-end.html
@@ -116,10 +116,11 @@
 										<li><a href="https://www.udemy.com/git-e-github-para-iniciantes/">Git e GitHub para iniciantes</a></li>
 										<li><a href="https://www.youtube.com/watch?v=epDCjksKMok&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o">Curso HTML5 - Gustavo Guanabara</a></li>
 										<li><a href="https://www.youtube.com/watch?v=FRhM6sMOTfg&list=PLwXQLZ3FdTVGf7GUtiOFLc_9AXO25iIzG">Curso CSS3 - Node Studio Treinamentos</a></li>
-										<li><a href="https://backend-br.slack.com/join/shared_invite/enQtMjQyOTM1MjQ5OTcyLTA1NTJiODM5YTA2YzYyZDUyMGRiNTc1NjAwODNhYTQ3OTlkYjE2ZDllMTc2MzlmNzFmOTI4Mzc2NWFhNzE2OTg">Slack Back-End Brasil</a></li>
-										<li><a href="https://frontendbrasil.slack.com/">Slack Front-End Brasil</a></li>
 										<li><a href="https://www.youtube.com/watch?v=4ZAOWlZRbZk&list=PLwXQLZ3FdTVG_mqZcOXhfFf3Po6whFv8o">Curso de Lógica de Programação - Node Studio Treinamentos</a></li>
 										<li><a href="https://www.youtube.com/watch?v=YoDJsSII2Ug&list=PLwXQLZ3FdTVGKl3iPEyEWpFoYkMUxWW5O">Curso de HTML5 - Node Studio Treinamentos</a></li>
+										<li><a href="https://www.youtube.com/watch?v=ftWXUUM5YxU&list=PLBnXXDBNZQpJKH1Fx2EAbKbG9p_dV_pKW">Curso JavaScript</a></li>
+										<li><a href="https://backend-br.slack.com/join/shared_invite/enQtMjQyOTM1MjQ5OTcyLTA1NTJiODM5YTA2YzYyZDUyMGRiNTc1NjAwODNhYTQ3OTlkYjE2ZDllMTc2MzlmNzFmOTI4Mzc2NWFhNzE2OTg">Slack Back-End Brasil</a></li>
+										<li><a href="https://frontendbrasil.slack.com/">Slack Front-End Brasil</a></li>
 										<li><a href="https://stackoverflow.com">Stackoverflow</a></li>
 									</ul>
 								</p>
