Trocando imagem de capa
Nova imagem de capa e com formato em png

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<section class="box special">
 								<span class="image featured">
 									<a href="podcast-1-iniciando-no-desenvolvimento-web-front-end.html">
-										<img src="images/iniciando-no-desenvolvimento-web-front-end.jpeg" alt="" width="400" />
+										<img src="images/iniciando-no-desenvolvimento-web-front-end.png" alt="" width="400" />
 									</a>
 								</span>
 								<a href="podcast-1-iniciando-no-desenvolvimento-web-front-end.html"><h3>#1 - Iniciando no desenvolvimento web.</h3></a>
