--- a/podcast-1-iniciando-no-desenvolvimento-web-front-end.html
+++ b/podcast-1-iniciando-no-desenvolvimento-web-front-end.html
@@ -19,7 +19,7 @@
 		<meta property="og:url" content="http://quebradev.com.br/podcast-1-iniciando-no-desenvolvimento-web-front-end.html">
 		<meta property="og:title" content="QuebraDev">
 		<meta property="og:description" content="Ainda tem aquela dúvida de como começar a estudar para tornar um desenvolvedor web? Tentamos desvendar mistérios que envolvem esse mundo. Chega mais cuidado ao da o play.">
-		<meta property="og:image" content="https://quebradev.github.io/images/iniciando-no-desenvolvimento-web-front-end.jpeg">
+		<meta property="og:image" content="https://quebradev.github.io/images/iniciando-no-desenvolvimento-web-front-end.png">
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
