--- a/podcast-1-iniciando-no-desenvolvimento-web-front-end.html
+++ b/podcast-1-iniciando-no-desenvolvimento-web-front-end.html
@@ -89,7 +89,7 @@
 										</li>
 										<li>Bruno Dias
 											<ul>
-												<li><a href="https://twitter.com/" target="_blank">Twitter</a></li>
+												<li><a href="https://www.instagram.com/bruno_diss/" target="_blank">Instagram</a></li>
 												<li><a href="https://github.com/iBrunox11" target="_blank">Github</a></li>
 											</ul>
 										</li>
